thêm detail vào
ok rồi

--- a/Theo loại/Laptop_ChoiGame.html
+++ b/Theo loại/Laptop_ChoiGame.html
@@ -292,7 +292,7 @@
 							<h3 class="aside-title">Top selling</h3>
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/MSI/MSI GV72 7RE-1424XVN.jpg" alt="">
+									<img src="../img/MSI/MSI GV72 7RE-1424XVN.jpg" alt="">
 								</div>
 								<div class="product-body">
 										<p class="product-category">MSI</p>
@@ -304,7 +304,7 @@
 
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/Dell/Dell XPS13.png" alt="">
+									<img src="../img/Dell/Dell XPS13.png" alt="">
 								</div>
 								<div class="product-body">
 										<p class="product-category">Dell</p>
@@ -315,7 +315,7 @@
 
 							<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/Asus/Asus GL503VM-GZ219T.jpg" alt="">
+									<img src="../img/Asus/Asus GL503VM-GZ219T.jpg" alt="">
 								</div>
 								<div class="product-body">
 										<p class="product-category">ASUS</p>
@@ -357,12 +357,13 @@
 						<!-- /store top filter -->
 
 						<!-- store products -->
-						<div class="row">
+						<a href="../detail/msi/msi_GP62M-1497.html" target="blank">
+							<div class="row">
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/MSI/MSI GP62M 7REX-1497XVN.jpg" alt="">
+										<img src="../img/MSI/MSI GP62M 7REX-1497XVN.jpg" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
@@ -389,13 +390,15 @@
 									</div>
 								</div>
 							</div>
+						</a>
 							<!-- /product -->
 
-							<!-- product -->
+							<a href="../detail/asus/Asus GL503VM-GZ219T.html" target="blank">
+								<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/Asus/Asus GL503VM-GZ219T.jpg" alt="">
+										<img src="../img/Asus/Asus GL503VM-GZ219T.jpg" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
@@ -424,13 +427,15 @@
 							</div>
 							<!-- /product -->
 
+							</a>
 							<div class="clearfix visible-sm visible-xs"></div>
 
-							<!-- product -->
+							<a href="../detail/msi/msi_GP62M.html" target="blank">
+								<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/MSI/MSI GP62M 7REX-1884XVN.jpg" alt="">
+										<img src="../img/MSI/MSI GP62M 7REX-1884XVN.jpg" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
@@ -451,13 +456,15 @@
 							</div>
 							<!-- /product -->
 
+							</a>
 							<div class="clearfix visible-lg visible-md"></div>
 
-							<!-- product -->
+							<a href="../detail/msi/msi_GP62MVR.html" target="blank">
+								<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/MSI/MSI GP62MVR 7RFX-893XVN.png" alt="">
+										<img src="../img/MSI/MSI GP62MVR 7RFX-893XVN.png" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
@@ -477,14 +484,16 @@
 								</div>
 							</div>
 							<!-- /product -->
+							</a>
 
 							<div class="clearfix visible-sm visible-xs"></div>
 
-							<!-- product -->
+							<a href="../detail/dell/dell inspiron 13 5378.html" target="blank">
+								<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/Dell/Dell Inspiron 13 5378-26W972.jpg" alt="">
+										<img src="../img/Dell/Dell Inspiron 13 5378-26W972.jpg" alt="">
 										<div class="product-label">
 											<span class="sale">-8%</span>
 											<span class="new">NEW</span>
@@ -508,12 +517,14 @@
 								</div>
 							</div>
 							<!-- /product -->
+							</a>
 							<div class="clearfix visible-sm visible-xs"></div>
 							<!-- product -->
-							<div class="col-md-4 col-xs-6">
+							<a href="../detail/msi/msi_GP72M.html" target="blank">
+								<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/MSI/MSI GP72M 7REX-1216XVN.png" alt="">
+										<img src="../img/MSI/MSI GP72M 7REX-1216XVN.png" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
@@ -540,15 +551,17 @@
 									</div>
 								</div>
 							</div>
+							</a>
 							<!-- /product -->
 
 							<div class="clearfix visible-lg visible-md visible-sm visible-xs"></div>
 
-							<!-- product -->
+							<a href="../detail/dell/Dell XPS13 9360-99H103.html" target="blank">
+								<!-- product -->
 							<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/Dell/Dell XPS13.png" alt="">
+										<img src="../img/Dell/Dell XPS13.png" alt="">
 										<div class="product-label">
 											<span class="sale">-7%</span>
 											<span class="new">NEW</span>
@@ -577,12 +590,14 @@
 								</div>
 							</div>
 							<!-- /product -->
+							</a>
 
 							<!-- product -->
-							<div class="col-md-4 col-xs-6">
+							<a href="../detail/msi/msi_GS63.html" target="blank">
+								<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/MSI/MSI GS63 7RD- 093XVN.png" alt="">
+										<img src="../img/MSI/MSI GS63 7RD- 093XVN.png" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
@@ -609,21 +624,23 @@
 									</div>
 								</div>
 							</div>
+							</a>
 							<!-- /product -->
 
 							<div class="clearfix visible-sm visible-xs"></div>
 
 							<!-- product -->
-							<div class="col-md-4 col-xs-6">
+							<a href="../detail/apple/mac_MPTT2SA.html">
+								<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/Mac/MacBook 15 MPTT2SA.png" alt="">
+										<img src="../img/Mac/MacBook 15 MPTT2SA.png" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">MacBook</p>
+										<p class="product-category">Apple</p>
 										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 15" MPTT2SA/A (Xám)</a></h3>
 										<h4 class="product-price">71.500.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -644,11 +661,13 @@
 									</div>
 								</div>
 							</div>
+							</a>
 							<!-- /product -->
-							<div class="col-md-4 col-xs-6">
+							<a href="../detail/asus/Asus UX510UX-CN204.html" target="blank">
+								<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/Asus/Asus UX510UX-CN204.jpg" alt="">
+										<img src="../img/Asus/Asus UX510UX-CN204.jpg" alt="">
 										<div class="product-label">
 											<span class="sale">-10%</span>
 										</div>
@@ -675,10 +694,12 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4 col-xs-6">
+							</a>
+							<a href="../detail/asus/Asus X510UQ-BR570.html">
+								<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/Asus/Asus X510UQ-BR570.jpg" alt="">
+										<img src="../img/Asus/Asus X510UQ-BR570.jpg" alt="">
 										<div class="product-label">
 											<span class="sale">-2%</span>
 										</div>
@@ -700,10 +721,13 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-4 col-xs-6">
+							</a>
+							
+							<a href="../detail/msi/msi_GV72.html" target="blank">
+								<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/MSI/MSI GV72 7RE-1424XVN.jpg" alt="">
+										<img src="../img/MSI/MSI GV72 7RE-1424XVN.jpg" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">MSI</p>
@@ -722,6 +746,7 @@
 									</div>
 								</div>
 							</div>
+							</a>
 						</div>
 						<!-- /store products -->
 
@@ -830,7 +855,7 @@
 					</ul>
 					<span class="copyright">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by BCMT
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by NQT
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</span>
 				</div>
