update link msi

--- a/detail/msi/msi_GP72M.html
+++ b/detail/msi/msi_GP72M.html
@@ -743,14 +743,14 @@
 					<div class="col-md-2 col-xs-6" style="margin-left:100px">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv62_3_1.jpg" height="120px" width="100px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv62_3_1.jpg" height="140px" width="100px" alt="">
 								<div class="product-label">
 									<span class="sale">-3%</span>
 								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop Gaming</p>
-								<h3 class="product-name"><a href="#">Laptop MSI GV62 7RD-1883XVN</a></h3>
+								<h3 class="product-name"><a href="msi_GV62.html">Laptop MSI GV62 7RD-1883XVN</a></h3>
 								<h4 class="product-price">21.990.000 ₫
  								<del class="product-old-price">$22.600.000</del></h4>
 								<div class="product-rating">
@@ -765,14 +765,14 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/3/5/35124_ltac407_1_1.jpg" height="120px" width="100px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/3/5/35124_ltac407_1_1.jpg" height="140px" width="100px" alt="">
 								<div class="product-label">
 									<span class="sale">-3%</span>
 								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop Gaming</p>
-								<h3 class="product-name"><a href="#">Laptop Asus AS VX5-591G-70XM</a></h3>
+								<h3 class="product-name"><a href="../asus/Asus S510UA-BQ111T.html">Laptop Asus AS VX5-591G-70XM</a></h3>
 								<h4 class="product-price">22.590.000 ₫
 								<del class="product-old-price">23.290.000 ₫
 								</del></h4>
@@ -788,11 +788,11 @@
 				<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_15076/2017/12/08/15076.png" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_15076/2017/12/08/15076.png" width="100px" height="140px" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop Gaming</p>
-								<h3 class="product-name"><a href="#">Laptop Dell XPS13 9365-K7DWW2</a></h3>
+								<h3 class="product-name"><a href="../dell/Dell XPS13 9365-K7DWW2.html">Laptop Dell XPS13 9365-K7DWW2</a></h3>
 								<h4 class="product-price">54.490.000 ₫</h4>
 								<div class="product-rating">
 								</div>
@@ -808,15 +808,15 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_14662/2017/11/27/14662.png" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_14662/2017/11/27/14662.png" width="100px" height="140px" alt="">
 								<div class="product-label">
 									<span class="new">NEW</span>
 								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop Gaming</p>
-								<h3 class="product-name"><a href="#">Laptop MSI GP72M 7REX-1216XVN</a></h3>
-								<h4 class="product-price">54.490.000 ₫</h4>
+								<h3 class="product-name"><a href="msi_GP72M.html">Laptop MSI GP72M 7REX-1216XVN</a></h3>
+								<h4 class="product-price">25.490.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -838,11 +838,11 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv62_2_1.jpg" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv62_2_1.jpg" width="100px" height="140px" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop Gaming</p>
-								<h3 class="product-name"><a href="#">Laptop MSI-IS GV62 7RD-1882XVN</a></h3>
+								<h3 class="product-name"><a href="msi_GV62-1882XVN.html">Laptop MSI-IS GV62 7RD-1882XVN</a></h3>
 								<h4 class="product-price">23.990.000 ₫ </h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
@@ -867,7 +867,7 @@
 			<!-- /container -->
 		</div>
 		<!-- /Section -->
-		<!-- Section -->
+			<!-- Section -->
 		<div class="section">
 			<!-- container -->
 			<div class="container">
@@ -886,11 +886,11 @@
 					<div class="col-md-2 col-xs-6" style="margin-left:100px">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/1/_/1_16_8.jpg" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/1/_/1_16_8.jpg" width="100px" height="140px" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop MSI</p>
-								<h3 class="product-name"><a href="#">Laptop MSI GP62M 7REX-1497XVN</a></h3>
+								<h3 class="product-name"><a href="msi_GP62M-1497.html">Laptop MSI GP62M 7REX-1497XVN</a></h3>
 								<h4 class="product-price">28.990.000 ₫</h4>
 								<div class="product-rating">
 								</div>
@@ -904,11 +904,11 @@
 				<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv62_3_1.jpg" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv62_3_1.jpg" width="100px" height="140px" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop MSI</p>
-								<h3 class="product-name"><a href="#">Laptop MSI-IS GV62 7RD-1883XVN</a></h3>
+								<h3 class="product-name"><a href="msi_GV62.html">Laptop MSI-IS GV62 7RD-1883XVN</a></h3>
 								<h4 class="product-price">21.990.000 ₫</h4>
 								<div class="product-rating">
 								</div>
@@ -924,14 +924,14 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv72_2.jpg" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/m/s/msi_gv72_2.jpg" width="100px" height="140px" alt="">
 								<div class="product-label">
 									<span class="new">NEW</span>
 								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop MSI</p>
-								<h3 class="product-name"><a href="#">Laptop MSI-IV GV72 7RD-874XVN </a></h3>
+								<h3 class="product-name"><a href="msi_GV72-874XVN.html">Laptop MSI-IV GV72 7RD-874XVN </a></h3>
 								<h4 class="product-price">24.490.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
@@ -954,11 +954,11 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_38320_18820/2017/12/18/38320_1513561863-1.jpg" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_38320_18820/2017/12/18/38320_1513561863-1.jpg" width="100px" height="140px" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop MSI</p>
-								<h3 class="product-name"><a href="#">Laptop MSI GV72 7RERK<br>-1424XVN </a></h3>
+								<h3 class="product-name"><a href="msi_GV72.html">Laptop MSI GV72 7RERK<br>-1424XVN </a></h3>
 								<h4 class="product-price">25.990.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
@@ -979,14 +979,14 @@
 				<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_14662/2017/11/27/14662.png" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_14662/2017/11/27/14662.png" width="100px" height="140px" alt="">
 								<div class="product-label">
 									<span class="new">NEW</span>
 								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Laptop Gaming</p>
-								<h3 class="product-name"><a href="#">Laptop MSI GP72M 7REX-1216XVN</a></h3>
+								<h3 class="product-name"><a href="msi_GP72M.html">Laptop MSI GP72M 7REX-1216XVN</a></h3>
 								<h4 class="product-price">54.490.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
