--- a/Theo loại/Laptop_DoanhNhan.html
+++ b/Theo loại/Laptop_DoanhNhan.html
@@ -12,20 +12,20 @@
  		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
 
  		<!-- Bootstrap -->
- 		<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../css/bootstrap.min.css"/>
 
  		<!-- Slick -->
- 		<link type="text/css" rel="stylesheet" href="css/slick.css"/>
- 		<link type="text/css" rel="stylesheet" href="css/slick-theme.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../css/slick.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../css/slick-theme.css"/>
 
  		<!-- nouislider -->
- 		<link type="text/css" rel="stylesheet" href="css/nouislider.min.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../css/nouislider.min.css"/>
 
  		<!-- Font Awesome Icon -->
- 		<link rel="stylesheet" href="css/font-awesome.min.css">
+ 		<link rel="stylesheet" href="../css/font-awesome.min.css">
 
  		<!-- Custom stlylesheet -->
- 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../css/style.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -289,21 +289,24 @@
 						<!-- aside Widget -->
 						<div class="aside">
 							<h3 class="aside-title">Top selling</h3>
-							<div class="product-widget">
+							<a href="../detail/apple/mac_MPXU2LL.html" target="blank">
+								<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/Mac/MacBook 13.3 MPXU2LL.jpg" alt="">
+									<img src="../img/Mac/MacBook 13.3 MPXU2LL.jpg" alt="">
 								</div>
 								<div class="product-body">
-									<p class="product-category">MacBook</p>
+									<p class="product-category">Apple</p>
 									<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)</a></h3>
 									<h4 class="product-price">39.250.000 ₫<del class="product-old-price"></del></h4>
 								</div>
 							</div>
+							</a>
 
 
-							<div class="product-widget">
+							<a href="../detail/dell/Dell Inspiron 14 7460.html">
+								<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/Dell/Dell Inspiron 14 7460-N4I5259W.jpg" alt="">
+									<img src="../img/Dell/Dell Inspiron 14 7460-N4I5259W.jpg" alt="">
 								</div>
 								<div class="product-body">
 									<p class="product-category">Dell</p>
@@ -311,10 +314,12 @@
 									<h4 class="product-price">16.490.000 ₫<del class="product-old-price">19.990.000 ₫</del></h4>
 								</div>
 							</div>
+							</a>
 
-							<div class="product-widget">
+							<a href="../detail/asus/Asus UX510UX-CN204.html" target="blank">
+								<div class="product-widget">
 								<div class="product-img">
-									<img src="./img/Asus/Asus UX510UX-CN204.jpg" alt="">
+									<img src="../img/Asus/Asus UX510UX-CN204.jpg" alt="">
 								</div>
 								<div class="product-body">
 									<p class="product-category">Asus</p>
@@ -322,6 +327,7 @@
 									<h4 class="product-price">15.490.000 ₫<del class="product-old-price">17.190.000 ₫</del></h4>
 								</div>
 							</div>
+							</a>
 						</div>
 						<!-- /aside Widget -->
 					</div>
@@ -358,10 +364,11 @@
 						<!-- store products -->
 						<div class="row">
 							<!-- product -->
-							<div class="col-md-4 col-xs-6">
+							<a href="../detail/dell/Dell Inspiron 14 7460.html" target="blank">
+									<div class="col-md-4 col-xs-6">
 								<div class="product">
 									<div class="product-img">
-										<img src="./img/Dell/Dell Inspiron 14 7460-N4I5259W.jpg" alt="">
+										<img src="../img/Dell/Dell Inspiron 14 7460-N4I5259W.jpg" alt="">
 										<div class="product-label">
 											<span class="sale">-18%</span>
 											<span class="new">NEW</span>
@@ -389,13 +396,15 @@
 									</div>
 								</div>
 							</div>
+							</a>
 							<!-- /product -->
 
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/dell/Dell Vostro 5468-VTI35008.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Dell/Dell Vostro 5468-VTI35008.png" alt="">
+										<img src="../img/Dell/Dell Vostro 5468-VTI35008.png" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
@@ -421,6 +430,7 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 
@@ -428,9 +438,10 @@
 
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/dell/Dell Inspiron 14 3467-M20NR21.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Dell/Dell Inspiron 14 3467-M20NR21.jpeg" alt="">
+										<img src="../img/Dell/Dell Inspiron 14 3467-M20NR21.jpeg" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">DELL</p>
@@ -448,6 +459,7 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 
@@ -455,9 +467,10 @@
 
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/dell/Dell Vostro 3468 (F3468-70088614).html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Dell/Dell Vostro 3468 (F3468-70088614).jpg" alt="">
+										<img src="../img/Dell/Dell Vostro 3468 (F3468-70088614).jpg" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">DELL</p>
@@ -475,6 +488,7 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 
@@ -482,15 +496,16 @@
 
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/apple/mac_MQD42LL.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Mac/MacBook Air MQD42LL.jpg" alt="">
+										<img src="../img/Mac/MacBook Air MQD42LL.jpg" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">MacBook</p>
+										<p class="product-category">Apple</p>
 										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook Air MQD42LL/A</a></h3>
 										<h4 class="product-price">27.700.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
@@ -505,20 +520,22 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 							<div class="clearfix visible-sm visible-xs"></div>
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/apple/mac_MNYM2SA.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Mac/MacBook 12 MNYM2SA.png" alt="">
+										<img src="../img/Mac/MacBook 12 MNYM2SA.png" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">MacBook</p>
+										<p class="product-category">Apple</p>
 										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 12" MNYM2SA/A (Vàng hồng)</a></h3>
 										<h4 class="product-price">33.450.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -538,6 +555,7 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 
@@ -545,15 +563,16 @@
 
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/apple/mac_MPXQ2SA.html">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Mac/MacBook 13.3 MPXQ2SA.png" alt="">
+										<img src="../img/Mac/MacBook 13.3 MPXQ2SA.png" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">MacBook</p>
+										<p class="product-category">Apple</p>
 										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXQ2SA/A</a></h3>
 										<h4 class="product-price">33.590.000 ₫<del class="product-old-price"></del></h4>
 										<div class="product-rating">
@@ -573,20 +592,22 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/apple/mac_MPXU2LL.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Mac/MacBook 13.3 MPXU2LL.jpg" alt="">
+										<img src="../img/Mac/MacBook 13.3 MPXU2LL.jpg" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">MacBook</p>
+										<p class="product-category">Apple</p>
 										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 13.3" MPXU2LL/A (Bạc)</a></h3>
 										<h4 class="product-price">39.250.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -606,6 +627,7 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 
@@ -613,15 +635,16 @@
 
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/apple/mac_MPTT2SA.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Mac/MacBook 15 MPTT2SA.png" alt="">
+										<img src="../img/Mac/MacBook 15 MPTT2SA.png" alt="">
 										<div class="product-label">
 											<span class="new">NEW</span>
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category">MacBook</p>
+										<p class="product-category">Apple</p>
 										<h3 class="product-name"><a href="#">Máy xách tay/ Laptop MacBook 15" MPTT2SA/A (Xám)</a></h3>
 										<h4 class="product-price">71.500.000 ₫<del class="product-old-price"></del></h4>
 											<div class="product-rating">
@@ -642,11 +665,13 @@
 									</div>
 								</div>
 							</div>
+								</a>
 							<!-- /product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+							<a href="../detail/asus/Asus UX510UX-CN204.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Asus/Asus UX510UX-CN204.jpg" alt="">
+										<img src="../img/Asus/Asus UX510UX-CN204.jpg" alt="">
 										<div class="product-label">
 											<span class="sale">-10%</span>
 										</div>
@@ -672,11 +697,14 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+
+							</a>						
 							</div>
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/asus/Asus X510UQ-BR570.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Asus/Asus X510UQ-BR570.jpg" alt="">
+										<img src="../img/Asus/Asus X510UQ-BR570.jpg" alt="">
 										<div class="product-label">
 											<span class="sale">-2%</span>
 										</div>
@@ -697,11 +725,13 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/asus/Asus X405UA-BV330T.html" target="blank">
+									<div class="product">
 									<div class="product-img">
-										<img src="./img/Asus/Asus X405UA-BV330T.jpg" alt="">
+										<img src="../img/Asus/Asus X405UA-BV330T.jpg" alt="">
 									</div>
 									<div class="product-body">
 										<p class="product-category">ASUS</p>
@@ -719,6 +749,8 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+
+								</a>							
 							</div>
 						</div>
 						<!-- /store products -->
@@ -841,12 +873,12 @@
 	<!-- /bottom footer -->
 </footer>
 		<!-- jQuery Plugins -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>
-		<script src="js/jquery.zoom.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="../js/jquery.min.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
+		<script src="../js/slick.min.js"></script>
+		<script src="../js/nouislider.min.js"></script>
+		<script src="../js/jquery.zoom.min.js"></script>
+		<script src="../js/main.js"></script>
 
 	</body>
 </html>
